# autocall

./: .gitignore  autocall_payoff.py  autocall_sobol_bridge.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
notebooks/: autocall.ipynb  autocall_payoff_demo.ipynb  path_generation_demo.ipynb  path_generator.ipynb
scripts/: build_demo_notebook.py
src/autocall/: __init__.py  market_data.py  path_generator.py  process.py  time_grid.py
src/autocall/payoff/: NOTES.md
src/autocall/vol/: implied_surface.py  local_vol.py  svi.py
tests/: conftest.py  test_implied_surface.py  test_local_vol.py  test_market_data.py  test_path_generator.py  test_process.py  test_svi.py  test_time_grid.py
